--- a/09-09-2019/public_html/css/style.css
+++ b/09-09-2019/public_html/css/style.css
@@ -3,7 +3,15 @@ html,body{
     padding: 0;
     margin: 0;
     font-family: Montserrat;
+    overflow-x: hidden;
+    background-color: #00d2d3; 
+    color: #222f3e;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
 #logo{
     height: 79px;
     width: 107px;
@@ -11,7 +19,7 @@ html,body{
 
 h1{
     text-align: center;
-    font-size: 500%;
+    font-size: 400%;
 }
 button{
     float: right;
@@ -38,6 +46,11 @@ button{
     margin: 0px 40%;
 }
 
-#desc{
-    width: 35vh;
+.main{
+    margin: 0px 0px;
+}
+
+.row{
+    padding: 5px;
+    margin: 20px 0px;
 }
