--- a/02-09-2019/css/style.css
+++ b/02-09-2019/css/style.css
@@ -29,8 +29,8 @@ h1:hover{
     display: inline-block;
     margin: 0px 90px;
     border-radius: 10px;
-	opacity: 0.55;
-	transition: 0.5s;
+
+	transition: 0.5s all ease-in-out;
 }
 
 .categorybox:hover{
